--- a/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizLastStep.xhtml
@@ -20,7 +20,7 @@
 
 	<p:commandButton id="instSaveButton" styleClass="saveButton" icon="ui-icon-disk" value="#{msgs.save}" actionListener="#{installmentManager.save()}"
 		update=":#{p:component(cc.attrs.observingComponent)}"
-		oncomplete="if(!args.validationFailed){toFirstTab(#{cc.attrs.wizWidgetVar}); #{cc.attrs.dialogWidgetVar}.hide(); setHideShow();}" />
+		oncomplete="if(!args.validationFailed){#{cc.attrs.dialogWidgetVar}.hide(); }" />
 
 	<p:blockUI block="instSaveButton" trigger="instSaveButton" />
 
