--- a/Jama/src/main/webapp/userWiz.xhtml
+++ b/Jama/src/main/webapp/userWiz.xhtml
@@ -12,7 +12,7 @@
 
 </h:head>
 <h:body>
-
+	<ui:include src="/resources/sections/toolbar.xhtml" />
 	<h:form id="userEdit">
 
 		<input type="hidden" name="cid" value='#{userEditor.conversation.id}' />
