--- a/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentWizShareTable.xhtml
@@ -9,7 +9,7 @@
 
 	<h:outputStylesheet library="css" name="shareTable.css" />
 
-	<p:panel id="lkj" header="#{msgs.shareTable_Header}">
+	<p:panel header="#{msgs.shareTable_Header}">
 
 		<p:panelGrid id="instValuesGrid">
 
@@ -123,7 +123,7 @@
 
 			<p:row>
 				<p:column colspan="3">
-					<p:fieldset legend="#{msgs.shareTableGoods}">
+					<p:fieldset legend="#{msgs.shareTableGoodsValues}">
 						<h:panelGrid id="instGoodsValuesGrid" columns="3" columnClasses="label, value, percents" styleClass="grid">
 
 							<h:outputText value="#{msgs.shareTableTrip}:" />
